--- a/perceptron_parte_II.ipynb
+++ b/perceptron_parte_II.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "id": "a0008754",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "id": "f79ae7aa",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "id": "15bcc5d0",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "eef7bf5c",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "8f290386",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "id": "33e382a3",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "c887f3ed",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "id": "af4b8f33",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "id": "473e39b3",
    "metadata": {},
    "outputs": [
@@ -344,9 +344,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 2\n",
-      "Média do total de ajustes: 33.8\n",
-      "Desvio padrão do total de ajustes: 14.668333238647124\n"
+      "Mínimo de épocas necessárias: 6\n",
+      "Média do total de ajustes: 42.2\n",
+      "Desvio padrão do total de ajustes: 14.225329521666625\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "id": "e237cc0b",
    "metadata": {},
    "outputs": [
@@ -368,9 +368,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 9\n",
-      "Média do total de ajustes: 284.9\n",
-      "Desvio padrão do total de ajustes: 148.25144181423667\n"
+      "Mínimo de épocas necessárias: 15\n",
+      "Média do total de ajustes: 357.1\n",
+      "Desvio padrão do total de ajustes: 105.39492397644206\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "id": "06df17b9",
    "metadata": {},
    "outputs": [
@@ -392,9 +392,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 9\n",
-      "Média do total de ajustes: 33.4\n",
-      "Desvio padrão do total de ajustes: 8.42852300228219\n"
+      "Mínimo de épocas necessárias: 10\n",
+      "Média do total de ajustes: 39.1\n",
+      "Desvio padrão do total de ajustes: 11.605602095539895\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "id": "33715d90",
    "metadata": {},
    "outputs": [
@@ -416,9 +416,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 14\n",
-      "Média do total de ajustes: 1311.6\n",
-      "Desvio padrão do total de ajustes: 848.7591177713498\n"
+      "Mínimo de épocas necessárias: 15\n",
+      "Média do total de ajustes: 924.0\n",
+      "Desvio padrão do total de ajustes: 550.6163818848836\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "id": "d79a60d0",
    "metadata": {},
    "outputs": [
@@ -440,9 +440,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 2\n",
-      "Média do total de ajustes: 92.9\n",
-      "Desvio padrão do total de ajustes: 32.565165437933835\n"
+      "Mínimo de épocas necessárias: 5\n",
+      "Média do total de ajustes: 93.6\n",
+      "Desvio padrão do total de ajustes: 35.27095122051573\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "id": "af260a77",
    "metadata": {},
    "outputs": [
@@ -464,9 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 58\n",
-      "Média do total de ajustes: 12825.4\n",
-      "Desvio padrão do total de ajustes: 5150.801902616718\n"
+      "Mínimo de épocas necessárias: 72\n",
+      "Média do total de ajustes: 8817.5\n",
+      "Desvio padrão do total de ajustes: 3243.2827582559003\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "db4fdf0e",
    "metadata": {},
    "outputs": [
@@ -499,12 +499,12 @@
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
       "  Taxa de Aprendizado   Intervalo de Pesos   Quantidade de Ajustes   Menor Número de Épocas para Convergência  \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
-      "          0.4              [-0.5, 0.5]            33.8 += 14.7                          2                      \n",
-      "          0.4              [-100, 100]           284.9 += 148.3                         9                      \n",
-      "          0.1              [-0.5, 0.5]            33.4 += 8.4                           9                      \n",
-      "          0.1              [-100, 100]          1311.6 += 848.8                         14                     \n",
-      "          0.01             [-0.5, 0.5]            92.9 += 32.6                          2                      \n",
-      "          0.01             [-100, 100]         12825.4 += 5150.8                        58                     \n",
+      "          0.4              [-0.5, 0.5]            42.2 +- 14.2                          6                      \n",
+      "          0.4              [-100, 100]           357.1 +- 105.4                         15                     \n",
+      "          0.1              [-0.5, 0.5]            39.1 +- 11.6                          10                     \n",
+      "          0.1              [-100, 100]           924.0 +- 550.6                         15                     \n",
+      "          0.01             [-0.5, 0.5]            93.6 +- 35.3                          5                      \n",
+      "          0.01             [-100, 100]          8817.5 +- 3243.3                        72                     \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n"
      ]
     }
@@ -530,7 +530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env_test",
    "language": "python",
    "name": "python3"
   },
