--- a/perceptron_parte_II.ipynb
+++ b/perceptron_parte_II.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a0008754",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f79ae7aa",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "15bcc5d0",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "eef7bf5c",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "8f290386",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "33e382a3",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "c887f3ed",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "af4b8f33",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "473e39b3",
    "metadata": {},
    "outputs": [
@@ -201,9 +201,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 6\n",
-      "Média do total de ajustes: 42.2\n",
-      "Desvio padrão do total de ajustes: 14.225329521666625\n"
+      "Mínimo de épocas necessárias: 3\n",
+      "Média do total de ajustes: 38.9\n",
+      "Desvio padrão do total de ajustes: 22.809866286324432\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "e237cc0b",
    "metadata": {},
    "outputs": [
@@ -225,9 +225,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 15\n",
-      "Média do total de ajustes: 357.1\n",
-      "Desvio padrão do total de ajustes: 105.39492397644206\n"
+      "Mínimo de épocas necessárias: 9\n",
+      "Média do total de ajustes: 334.7\n",
+      "Desvio padrão do total de ajustes: 141.34924831777494\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "06df17b9",
    "metadata": {},
    "outputs": [
@@ -249,9 +249,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 10\n",
-      "Média do total de ajustes: 39.1\n",
-      "Desvio padrão do total de ajustes: 11.605602095539895\n"
+      "Mínimo de épocas necessárias: 4\n",
+      "Média do total de ajustes: 29.5\n",
+      "Desvio padrão do total de ajustes: 12.603570922560003\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "33715d90",
    "metadata": {},
    "outputs": [
@@ -273,9 +273,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 15\n",
-      "Média do total de ajustes: 924.0\n",
-      "Desvio padrão do total de ajustes: 550.6163818848836\n"
+      "Mínimo de épocas necessárias: 11\n",
+      "Média do total de ajustes: 1325.1\n",
+      "Desvio padrão do total de ajustes: 524.0506559484493\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "d79a60d0",
    "metadata": {},
    "outputs": [
@@ -297,9 +297,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 5\n",
-      "Média do total de ajustes: 93.6\n",
-      "Desvio padrão do total de ajustes: 35.27095122051573\n"
+      "Mínimo de épocas necessárias: 9\n",
+      "Média do total de ajustes: 73.8\n",
+      "Desvio padrão do total de ajustes: 29.17121869240296\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "af260a77",
    "metadata": {},
    "outputs": [
@@ -321,9 +321,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 72\n",
-      "Média do total de ajustes: 8817.5\n",
-      "Desvio padrão do total de ajustes: 3243.2827582559003\n"
+      "Mínimo de épocas necessárias: 45\n",
+      "Média do total de ajustes: 10530.6\n",
+      "Desvio padrão do total de ajustes: 5457.43868861575\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "db4fdf0e",
    "metadata": {},
    "outputs": [
@@ -356,12 +356,12 @@
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
       "  Taxa de Aprendizado   Intervalo de Pesos   Quantidade de Ajustes   Menor Número de Épocas para Convergência  \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
-      "          0.4              [-0.5, 0.5]            42.2 +- 14.2                          6                      \n",
-      "          0.4              [-100, 100]           357.1 +- 105.4                         15                     \n",
-      "          0.1              [-0.5, 0.5]            39.1 +- 11.6                          10                     \n",
-      "          0.1              [-100, 100]           924.0 +- 550.6                         15                     \n",
-      "          0.01             [-0.5, 0.5]            93.6 +- 35.3                          5                      \n",
-      "          0.01             [-100, 100]          8817.5 +- 3243.3                        72                     \n",
+      "          0.4              [-0.5, 0.5]            38.9 +- 22.8                          3                      \n",
+      "          0.4              [-100, 100]           334.7 +- 141.3                         9                      \n",
+      "          0.1              [-0.5, 0.5]            29.5 +- 12.6                          4                      \n",
+      "          0.1              [-100, 100]          1325.1 +- 524.1                         11                     \n",
+      "          0.01             [-0.5, 0.5]            73.8 +- 29.2                          9                      \n",
+      "          0.01             [-100, 100]         10530.6 +- 5457.4                        45                     \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n"
      ]
     }
@@ -387,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
