Finalização Parte 3, Ajuste na Parte 2, Remoção de Prints Desnecessários

--- a/perceptron_parte_II.ipynb
+++ b/perceptron_parte_II.ipynb
@@ -16,36 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 228,
    "id": "a0008754",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from prettytable import PrettyTable, TableStyle"
+    "from prettytable import PrettyTable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 229,
    "id": "f79ae7aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Verificando qual .txt usar\n",
-    "n = (0 + 7 + 3 + 1 + 2) % 4\n",
-    "n"
+    "n = (0 + 7 + 3 + 1 + 2) % 4"
    ]
   },
   {
@@ -58,174 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 230,
    "id": "15bcc5d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.13658687, -0.16460088,  0.        , ...,  0.99252852,\n",
-       "        1.06937678,  1.        ])"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dados = np.fromfile('rna-2025.1-pp2.1-dados/data1.txt')\n",
-    "dados"
+    "dados = np.fromfile('rna-2025.1-pp2.1-dados/data1.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 231,
    "id": "eef7bf5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(600, 1, 3)\n",
-      "float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = dados.size//3\n",
-    "dados = dados.reshape((m,1,3))\n",
-    "print(dados.shape)\n",
-    "print(dados.dtype)"
+    "dados = dados.reshape((m,1,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "6880a0c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.13658687, -0.16460088,  0.        ]],\n",
-       "\n",
-       "       [[-0.0228559 , -0.01094684,  0.        ]],\n",
-       "\n",
-       "       [[-0.02654897,  0.00582183,  0.        ]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 0.99007304,  0.8921047 ,  1.        ]],\n",
-       "\n",
-       "       [[ 0.91691441,  1.15684083,  1.        ]],\n",
-       "\n",
-       "       [[ 0.99252852,  1.06937678,  1.        ]]])"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 232,
    "id": "8f290386",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.array([[linha[0][0], linha[0][1]] for linha in dados])\n",
     "y = np.array([[linha[0][2]] for linha in dados]).ravel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "id": "d458f9c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.13658687, -0.16460088],\n",
-       "       [-0.0228559 , -0.01094684],\n",
-       "       [-0.02654897,  0.00582183],\n",
-       "       ...,\n",
-       "       [ 0.99007304,  0.8921047 ],\n",
-       "       [ 0.91691441,  1.15684083],\n",
-       "       [ 0.99252852,  1.06937678]])"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "id": "6656a695",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1.])"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
    ]
   },
   {
@@ -238,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 233,
    "id": "33e382a3",
    "metadata": {},
    "outputs": [],
@@ -259,6 +107,12 @@
     "        return  y_predicted != y\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        \"\"\"A função fit serve para treinar a nossa classe perceptron. Ao longo das épocas, a função realiza previsões e ajuda os pesos e o viés até atingir o número máximo de épocas definido anteriormente ou chegar em uma previsão sem erros.\n",
+    "        Parâmetros:\n",
+    "            X (np.ndarray): conjunto de treinamento.\n",
+    "            y (np.ndarray): rótulos correspondentes ao conjunto de treinamento.\n",
+    "        Retorna:\n",
+    "            None\"\"\"\n",
     "        if self.weights is None:\n",
     "            self.weights = np.random.uniform(low=-0.5, high=0.5, size=2)\n",
     "        self.bias = 0\n",
@@ -297,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 234,
    "id": "c887f3ed",
    "metadata": {},
    "outputs": [],
@@ -312,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 235,
    "id": "af4b8f33",
    "metadata": {},
    "outputs": [],
@@ -336,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 236,
    "id": "473e39b3",
    "metadata": {},
    "outputs": [
@@ -344,9 +198,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 6\n",
-      "Média do total de ajustes: 42.2\n",
-      "Desvio padrão do total de ajustes: 14.225329521666625\n"
+      "Mínimo de épocas necessárias: 3\n",
+      "Média do total de ajustes: 39.5\n",
+      "Desvio padrão do total de ajustes: 23.77919258511525\n"
      ]
     }
    ],
@@ -360,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 237,
    "id": "e237cc0b",
    "metadata": {},
    "outputs": [
@@ -368,9 +222,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 15\n",
-      "Média do total de ajustes: 357.1\n",
-      "Desvio padrão do total de ajustes: 105.39492397644206\n"
+      "Mínimo de épocas necessárias: 2\n",
+      "Média do total de ajustes: 341.9\n",
+      "Desvio padrão do total de ajustes: 172.61254299731522\n"
      ]
     }
    ],
@@ -384,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 238,
    "id": "06df17b9",
    "metadata": {},
    "outputs": [
@@ -392,9 +246,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 10\n",
-      "Média do total de ajustes: 39.1\n",
-      "Desvio padrão do total de ajustes: 11.605602095539895\n"
+      "Mínimo de épocas necessárias: 3\n",
+      "Média do total de ajustes: 32.2\n",
+      "Desvio padrão do total de ajustes: 15.341447128612085\n"
      ]
     }
    ],
@@ -408,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 239,
    "id": "33715d90",
    "metadata": {},
    "outputs": [
@@ -416,9 +270,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 15\n",
-      "Média do total de ajustes: 924.0\n",
-      "Desvio padrão do total de ajustes: 550.6163818848836\n"
+      "Mínimo de épocas necessárias: 10\n",
+      "Média do total de ajustes: 1190.0\n",
+      "Desvio padrão do total de ajustes: 508.222195501141\n"
      ]
     }
    ],
@@ -432,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 240,
    "id": "d79a60d0",
    "metadata": {},
    "outputs": [
@@ -440,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 5\n",
-      "Média do total de ajustes: 93.6\n",
-      "Desvio padrão do total de ajustes: 35.27095122051573\n"
+      "Mínimo de épocas necessárias: 2\n",
+      "Média do total de ajustes: 76.2\n",
+      "Desvio padrão do total de ajustes: 35.59157203608742\n"
      ]
     }
    ],
@@ -456,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 241,
    "id": "af260a77",
    "metadata": {},
    "outputs": [
@@ -464,9 +318,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mínimo de épocas necessárias: 72\n",
-      "Média do total de ajustes: 8817.5\n",
-      "Desvio padrão do total de ajustes: 3243.2827582559003\n"
+      "Mínimo de épocas necessárias: 82\n",
+      "Média do total de ajustes: 10379.3\n",
+      "Desvio padrão do total de ajustes: 6188.992067372521\n"
      ]
     }
    ],
@@ -488,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 242,
    "id": "db4fdf0e",
    "metadata": {},
    "outputs": [
@@ -499,12 +353,12 @@
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
       "  Taxa de Aprendizado   Intervalo de Pesos   Quantidade de Ajustes   Menor Número de Épocas para Convergência  \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n",
-      "          0.4              [-0.5, 0.5]            42.2 +- 14.2                          6                      \n",
-      "          0.4              [-100, 100]           357.1 +- 105.4                         15                     \n",
-      "          0.1              [-0.5, 0.5]            39.1 +- 11.6                          10                     \n",
-      "          0.1              [-100, 100]           924.0 +- 550.6                         15                     \n",
-      "          0.01             [-0.5, 0.5]            93.6 +- 35.3                          5                      \n",
-      "          0.01             [-100, 100]          8817.5 +- 3243.3                        72                     \n",
+      "          0.4              [-0.5, 0.5]            39.5 +- 23.8                          3                      \n",
+      "          0.4              [-100, 100]           341.9 +- 172.6                         2                      \n",
+      "          0.1              [-0.5, 0.5]            32.2 +- 15.3                          3                      \n",
+      "          0.1              [-100, 100]          1190.0 +- 508.2                         10                     \n",
+      "          0.01             [-0.5, 0.5]            76.2 +- 35.6                          2                      \n",
+      "          0.01             [-100, 100]         10379.3 +- 6189.0                        82                     \n",
       "+---------------------+--------------------+-----------------------+------------------------------------------+\n"
      ]
     }
@@ -512,7 +366,6 @@
    "source": [
     "table = PrettyTable()\n",
     "\n",
-    "# table.set_style(TableStyle.MARKDOWN)\n",
     "table.vertical_char = \" \"\n",
     "\n",
     "table.field_names = [\"Taxa de Aprendizado\", \"Intervalo de Pesos\", \"Quantidade de Ajustes\", \"Menor Número de Épocas para Convergência\"]\n",
@@ -526,11 +379,21 @@
     "\n",
     "print(table)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ebc826",
+   "metadata": {},
+   "source": [
+    "Dentre esses, os casos com taxa de aprendizado η = 0.1 e η = 0.4 com Intervalo de Pesos [-0.5, 0.5] apresentam as menores médias de quantidade de ajustes e baixo número de épocas para convergir, sendo estas a melhores configurações.\n",
+    "\n",
+    "A solução com taxa de aprendixado η = 0.01 e intervalo de pesos [-100,100] se mostra com a maior média de ajustes e alto número de épocas para convergir, sendo o pior cenário."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
